package uk.ac.leedsbeckett.studentsesc;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class StudentSescApplication {

    public static void main(String[] args) {
        SpringApplication.run(StudentSescApplication.class, args);
    }

}
